--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
 
   ghost:
     image: ghost:5-alpine
+    depends_on:
+      - db
     restart: always
     ports:
       - 8080:2368
@@ -18,7 +20,8 @@ services:
       url: http://localhost:8080
       # contrary to the default mentioned in the linked documentation, this image defaults to NODE_ENV=production (so development mode needs to be explicitly specified if desired)
       #NODE_ENV: development
-
+    volumes:
+      - ./content:/var/lib/ghost/content
   db:
     image: mysql:8.0
     restart: always
@@ -27,3 +30,5 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: example
       TZ: "Asia/Tokyo"
+    volumes:
+      - ./db:/var/lib/mysql
