--- a/v4/docker-compose.yml
+++ b/v4/docker-compose.yml
@@ -3,12 +3,12 @@ version: '3.1'
 services:
 
   ghost:
-    image: ghost:4
+    image: ghost:4-alpine
     depends_on:
       - db
     restart: always
     ports:
-      - 8082:2368
+      - 8080:2368
     environment:
       # see https://ghost.org/docs/config/#configuration-options
       database__client: mysql
@@ -17,7 +17,7 @@ services:
       database__connection__password: example
       database__connection__database: ghost
       # this url value is just an example, and is likely wrong for your environment!
-      url: http://localhost:8082
+      url: http://localhost:8080
       # contrary to the default mentioned in the linked documentation, this image defaults to NODE_ENV=production (so development mode needs to be explicitly specified if desired)
       #NODE_ENV: development
     volumes:
