--- a/v5/docker-compose.yml
+++ b/v5/docker-compose.yml
@@ -1,7 +1,4 @@
-version: '3.1'
-
 services:
-
   ghost:
     image: ghost:5-alpine
     depends_on:
@@ -29,6 +26,6 @@ services:
     #   - "3307:3306"
     environment:
       MYSQL_ROOT_PASSWORD: example
-      TZ: "Asia/Tokyo"
+      TZ: 'Asia/Tokyo'
     volumes:
       - ./db:/var/lib/mysql
